--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.0.1",
     "ant-design-vue": "^2.1.6",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "mockjs": "^1.1.0",
     "qiankun": "^2.4.2",
+    "uuid": "^8.3.2",
     "vue": "^3.0.0",
     "vue-i18n": "^9.1.6",
     "vue-router": "^4.0.0-0",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@types/mockjs": "^1.0.3",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
