--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ant-design-vue": "^2.1.6",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "immutable": "^4.0.0-rc.12",
     "mockjs": "^1.1.0",
     "qiankun": "^2.4.2",
     "uuid": "^8.3.2",
